@@ -1,3 +1,6 @@
+2012-01-04
+* add infrastructure for postrun scans
+
 2012-01-03
 * parallellise unpacking. Hardcoded to 1 worker for now.
 * big file improvements for lzip, lzo and 7z unpacking
